Added Color Range, Block Types in structures, Image cropping.
. The color picker with detect and segment the color of the pixel selected. 
  - BGR is converted to the HSV space where Hue is the most important attribute.
  - Sequential Closing and Opening morhpology algorithms are applied just afterwards.

. Block structures
  -  Blocks will have fixed attributes depending on the type: number of squares,  coordinates location array[ ], typeID

. Image can be cropped according to specifications.
  - the is a method that allows to take a square cropped centered in the middle of the image with the side lenght of the 75% of the lenthg.


.

--- a/Project3.vcxproj.filters
+++ b/Project3.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="ColorTracking.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="BlockTypes.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VFunctions.h">
