--- a/Project3.vcxproj
+++ b/Project3.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BlockTypes.cpp" />
     <ClCompile Include="ColorTracking.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="VFunctions.cpp" />
