Better block structures + Connected objects
- Main has been updated to chain the functionalities.
- We now detect the number of the different objects detected during  a single segmentation and initialize an array with the proper size.

--- a/Project3.vcxproj
+++ b/Project3.vcxproj
@@ -127,10 +127,12 @@
     <ClCompile Include="ColorTracking.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="VFunctions.cpp" />
+    <ClCompile Include="VirtualBoard.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ColorTracking.h" />
     <ClInclude Include="VFunctions.h" />
+    <ClInclude Include="VirtualBoard.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
